# movie-discovery-app

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: user.py
backend/app/models/utils/: jwt.py
backend/app/routes/: __init__.py  auth.py  health.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: auth-shell.tsx  site-chrome.tsx
frontend/src/lib/: api.ts  auth.tsx  movies.ts
frontend/src/pages/: Index.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx
frontend/src/routes/: __root.tsx  index.tsx  profile.tsx  signin.tsx  signup.tsx
